# fast-notes

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  test.db
frontend/: app.js  index.html  styles.css
src/fast_notes/: config.py  main.py
src/fast_notes/api/: notes.py
src/fast_notes/db/: schema.py
src/fast_notes/models/: note.py
src/fast_notes/services/: notes_service.py
tests/integration/: test_db.py  test_notes.py
